# ai_english_tutor

./: .gitignore  LICENSE  commands.sh  main.py  pyproject.toml
notebooks/: playground.ipynb
src/: analyser.py  listener.py  recorder.py
transcription/: jfk.txt
